--- a/package.json
+++ b/package.json
@@ -9,19 +9,43 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-email/components": "^0.1.1",
+    "@reduxjs/toolkit": "^2.8.2",
+    "@tiptap/extension-hard-break": "^2.25.0",
+    "@tiptap/extension-text-style": "^2.24.0",
+    "@tiptap/extension-underline": "^2.24.0",
+    "@tiptap/pm": "^2.24.0",
+    "@tiptap/react": "^2.24.0",
+    "@tiptap/starter-kit": "^2.24.0",
+    "axios": "^1.10.0",
+    "bcryptjs": "^3.0.2",
+    "bootstrap-icons": "^1.13.1",
+    "date-fns": "^4.1.0",
+    "firebase": "^11.10.0",
+    "html-react-parser": "^5.2.5",
+    "jodit-react": "^5.2.19",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.16.0",
+    "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.4"
+    "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.5",
+    "resend": "^4.6.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
