--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "firebase": "^11.10.0",
     "html-react-parser": "^5.2.5",
     "jodit-react": "^5.2.19",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0",
     "next": "15.3.4",
